Bug 35261: Update links for self registration avoiding "here"
This patch updates several OPAC templates to change the wording of the
self registration link to "Create an account."

Minor adjustments to CSS have been made to make whitespace around the
links more comfortable.

To test, apply the patch and rebuild the OPAC CSS.

- If necessary enable the PatronSelfRegistration system preference is
  enabled.
- Go to the OPAC and check the login form in the right-hand sidebar.
- Click the "Log in to your account" link in the header and check the
  form displayed in the modal window.
- Navigate directly to /cgi-bin/koha/opac-user.pl and check the link on
  the login page.
- Complete the self-registration process and check the link in the
  right-hand sidebar menu on the "Registration complete" page.

--- a/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
+++ b/koha-tmpl/opac-tmpl/bootstrap/css/src/opac.scss
@@ -315,6 +315,14 @@ th {
     }
 }
 
+#auth {
+    margin-bottom: 1rem;
+
+    p {
+        margin: .5rem 0;
+    }
+}
+
 #basketcount {
     display: inline;
     margin: 0;
@@ -2074,6 +2082,10 @@ nav {
         }
     }
 
+    p {
+        margin: .5rem 0;
+    }
+
     .closebtn {
         color: #C00;
         opacity: 1;
@@ -2091,10 +2103,8 @@ nav {
     }
 }
 
-.nologininstructions,
-.forgotpassword,
-.patronregistration {
-    padding-top: 1em;
+#nologininstructions {
+    margin: .5rem 0;
 }
 
 .registration-label {
